--- a/src/app/Componentes/navbar/navbar.component.html
+++ b/src/app/Componentes/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="text-muted" href="#">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
         </a>
-        <a class="btn btn-sm btn-outline-secondary" href="/">Log In</a>
+        <a class="btn btn-sm btn-outline-secondary" routerLink="login">Log In</a>
       </div>
     </div>
     
@@ -18,7 +18,7 @@
     
     <div class="nav-scroller py-1 mb-2">
       <nav class="nav d-flex justify-content-between">
-        <a class="p-2 text-muted" routerLink="Radio/profiles" routerLink="/profiles">Profiles</a>
+        <a class="p-2 text-muted" routerLink="profiles">Profiles</a>
         <a class="p-2 text-muted" href="#">U.S.</a>
         <a class="p-2 text-muted" href="#">Technology</a>
         <a class="p-2 text-muted" href="#">Design</a>
